# teal-lambda

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TODO.md
prompts/: tell.md
src/: dynamo.rs  gemini.rs  http_handler.rs  main.rs  openai_client.rs  prompts.rs  schema.rs  tell.rs  users.rs
