[package]
name = "teal-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.78.0"
chrono = { version = "0.4.41", features = ["serde"] }
lambda_http = "0.13.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.219"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "full"] }
uuid = { version = "1", features = ["v4"] }
